gap fix

--- a/client/components/ads/main.scss
+++ b/client/components/ads/main.scss
@@ -12,14 +12,17 @@ $ad-medium-breakpoint: 760px;
 		line-height: 0;
 		text-align: center;
 	}
+}
 
+.above-header-advert, .bottom-advert-mobile {
 	&.o-ads--empty,
 	&[data-o-ads-loaded="false"] {
 		height: 0;
 		min-height: 0;
 		padding: 0;
-	}
 }
+}
+
 
 /*! end:head.css */
 .sidebar-advert {
